--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-validator": "^7.2.1",
     "mongoose": "^8.12.1",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
@@ -37,6 +38,7 @@
     "@types/express-session": "^1.18.1",
     "@types/node": "^22.13.10",
     "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/passport-strategy": "^0.2.38",
     "nodemon": "^3.1.9",
