--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "express-validator": "^7.2.1",
     "mongoose": "^8.12.1",
     "passport": "^0.7.0",
+    "passport-discord": "^0.1.4",
+    "passport-github": "^1.1.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0"
   },
@@ -41,6 +43,8 @@
     "@types/express-session": "^1.18.1",
     "@types/node": "^22.13.10",
     "@types/passport": "^1.0.17",
+    "@types/passport-discord": "^0.1.14",
+    "@types/passport-github": "^1.1.12",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/passport-strategy": "^0.2.38",
